# second-brain

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MASTER_LOG.md  README.md  plan.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
sample-vault/: knowledge-graphs.md  personal-llm.md  recall.md
src/second_brain/: __init__.py  config.py  contradictions.py  graphify_adapter.py  graphview.py  link_predict.py  links.py  merge_proposals.py  near_dup.py  vault.py
src/second_brain/interfaces/: __init__.py  cli.py
tests/: test_contradictions.py  test_graphify_adapter.py  test_graphview.py  test_link_predict.py  test_links.py  test_merge_proposals.py  test_near_dup.py  test_vault.py
